grammar/HistoryFileGrammarParser.cpp

// Generated from HistoryFileGrammar.g4 by ANTLR 4.7.1


#include "HistoryFileGrammarListener.h"

#include "HistoryFileGrammarParser.h"


using namespace antlrcpp;
using namespace antlr4;

HistoryFileGrammarParser::HistoryFileGrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HistoryFileGrammarParser::~HistoryFileGrammarParser() {
  delete _interpreter;
}

std::string HistoryFileGrammarParser::getGrammarFileName() const {
  return "HistoryFileGrammar.g4";
}

const std::vector<std::string>& HistoryFileGrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HistoryFileGrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FichierContext ------------------------------------------------------------------

HistoryFileGrammarParser::FichierContext::FichierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HistoryFileGrammarParser::HandContext *> HistoryFileGrammarParser::FichierContext::hand() {
  return getRuleContexts<HistoryFileGrammarParser::HandContext>();
}

HistoryFileGrammarParser::HandContext* HistoryFileGrammarParser::FichierContext::hand(size_t i) {
  return getRuleContext<HistoryFileGrammarParser::HandContext>(i);
}


size_t HistoryFileGrammarParser::FichierContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleFichier;
}

void HistoryFileGrammarParser::FichierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFichier(this);
}

void HistoryFileGrammarParser::FichierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFichier(this);
}

HistoryFileGrammarParser::FichierContext* HistoryFileGrammarParser::fichier() {
  FichierContext *_localctx = _tracker.createInstance<FichierContext>(_ctx, getState());
  enterRule(_localctx, 0, HistoryFileGrammarParser::RuleFichier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(187); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(186);
      hand();
      setState(189); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HistoryFileGrammarParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HandContext ------------------------------------------------------------------

HistoryFileGrammarParser::HandContext::HandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryFileGrammarParser::HandHeaderContext* HistoryFileGrammarParser::HandContext::handHeader() {
  return getRuleContext<HistoryFileGrammarParser::HandHeaderContext>(0);
}

HistoryFileGrammarParser::PositionsContext* HistoryFileGrammarParser::HandContext::positions() {
  return getRuleContext<HistoryFileGrammarParser::PositionsContext>(0);
}

HistoryFileGrammarParser::JeuContext* HistoryFileGrammarParser::HandContext::jeu() {
  return getRuleContext<HistoryFileGrammarParser::JeuContext>(0);
}

HistoryFileGrammarParser::SummarySectionContext* HistoryFileGrammarParser::HandContext::summarySection() {
  return getRuleContext<HistoryFileGrammarParser::SummarySectionContext>(0);
}


size_t HistoryFileGrammarParser::HandContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleHand;
}

void HistoryFileGrammarParser::HandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHand(this);
}

void HistoryFileGrammarParser::HandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHand(this);
}

HistoryFileGrammarParser::HandContext* HistoryFileGrammarParser::hand() {
  HandContext *_localctx = _tracker.createInstance<HandContext>(_ctx, getState());
  enterRule(_localctx, 2, HistoryFileGrammarParser::RuleHand);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(191);
    handHeader();
    setState(192);
    positions();
    setState(193);
    jeu();
    setState(194);
    summarySection();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HandHeaderContext ------------------------------------------------------------------

HistoryFileGrammarParser::HandHeaderContext::HandHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryFileGrammarParser::FirstLineContext* HistoryFileGrammarParser::HandHeaderContext::firstLine() {
  return getRuleContext<HistoryFileGrammarParser::FirstLineContext>(0);
}

HistoryFileGrammarParser::SecondLineContext* HistoryFileGrammarParser::HandHeaderContext::secondLine() {
  return getRuleContext<HistoryFileGrammarParser::SecondLineContext>(0);
}


size_t HistoryFileGrammarParser::HandHeaderContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleHandHeader;
}

void HistoryFileGrammarParser::HandHeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHandHeader(this);
}

void HistoryFileGrammarParser::HandHeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHandHeader(this);
}

HistoryFileGrammarParser::HandHeaderContext* HistoryFileGrammarParser::handHeader() {
  HandHeaderContext *_localctx = _tracker.createInstance<HandHeaderContext>(_ctx, getState());
  enterRule(_localctx, 4, HistoryFileGrammarParser::RuleHandHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(196);
    firstLine();
    setState(197);
    secondLine();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JeuContext ------------------------------------------------------------------

HistoryFileGrammarParser::JeuContext::JeuContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryFileGrammarParser::AnteblindSectionContext* HistoryFileGrammarParser::JeuContext::anteblindSection() {
  return getRuleContext<HistoryFileGrammarParser::AnteblindSectionContext>(0);
}

HistoryFileGrammarParser::PreflopSectionContext* HistoryFileGrammarParser::JeuContext::preflopSection() {
  return getRuleContext<HistoryFileGrammarParser::PreflopSectionContext>(0);
}

HistoryFileGrammarParser::FlopSectionContext* HistoryFileGrammarParser::JeuContext::flopSection() {
  return getRuleContext<HistoryFileGrammarParser::FlopSectionContext>(0);
}

HistoryFileGrammarParser::TurnSectionContext* HistoryFileGrammarParser::JeuContext::turnSection() {
  return getRuleContext<HistoryFileGrammarParser::TurnSectionContext>(0);
}

HistoryFileGrammarParser::RiverSectionContext* HistoryFileGrammarParser::JeuContext::riverSection() {
  return getRuleContext<HistoryFileGrammarParser::RiverSectionContext>(0);
}

HistoryFileGrammarParser::ShowdownSectionContext* HistoryFileGrammarParser::JeuContext::showdownSection() {
  return getRuleContext<HistoryFileGrammarParser::ShowdownSectionContext>(0);
}


size_t HistoryFileGrammarParser::JeuContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleJeu;
}

void HistoryFileGrammarParser::JeuContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJeu(this);
}

void HistoryFileGrammarParser::JeuContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitJeu(this);
}

HistoryFileGrammarParser::JeuContext* HistoryFileGrammarParser::jeu() {
  JeuContext *_localctx = _tracker.createInstance<JeuContext>(_ctx, getState());
  enterRule(_localctx, 6, HistoryFileGrammarParser::RuleJeu);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(199);
    anteblindSection();
    setState(200);
    preflopSection();
    setState(202);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HistoryFileGrammarParser::T__33) {
      setState(201);
      flopSection();
    }
    setState(205);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HistoryFileGrammarParser::T__34) {
      setState(204);
      turnSection();
    }
    setState(208);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HistoryFileGrammarParser::T__35) {
      setState(207);
      riverSection();
    }
    setState(211);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HistoryFileGrammarParser::T__36) {
      setState(210);
      showdownSection();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FirstLineContext ------------------------------------------------------------------

HistoryFileGrammarParser::FirstLineContext::FirstLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryFileGrammarParser::GameInfoContext* HistoryFileGrammarParser::FirstLineContext::gameInfo() {
  return getRuleContext<HistoryFileGrammarParser::GameInfoContext>(0);
}

HistoryFileGrammarParser::HandIdContext* HistoryFileGrammarParser::FirstLineContext::handId() {
  return getRuleContext<HistoryFileGrammarParser::HandIdContext>(0);
}

HistoryFileGrammarParser::TypePlayContext* HistoryFileGrammarParser::FirstLineContext::typePlay() {
  return getRuleContext<HistoryFileGrammarParser::TypePlayContext>(0);
}

HistoryFileGrammarParser::DateContext* HistoryFileGrammarParser::FirstLineContext::date() {
  return getRuleContext<HistoryFileGrammarParser::DateContext>(0);
}


size_t HistoryFileGrammarParser::FirstLineContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleFirstLine;
}

void HistoryFileGrammarParser::FirstLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFirstLine(this);
}

void HistoryFileGrammarParser::FirstLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFirstLine(this);
}

HistoryFileGrammarParser::FirstLineContext* HistoryFileGrammarParser::firstLine() {
  FirstLineContext *_localctx = _tracker.createInstance<FirstLineContext>(_ctx, getState());
  enterRule(_localctx, 8, HistoryFileGrammarParser::RuleFirstLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(213);
    match(HistoryFileGrammarParser::T__0);
    setState(214);
    gameInfo();
    setState(215);
    match(HistoryFileGrammarParser::T__1);
    setState(216);
    handId();
    setState(217);
    match(HistoryFileGrammarParser::T__1);
    setState(218);
    typePlay();
    setState(219);
    match(HistoryFileGrammarParser::T__1);
    setState(220);
    date();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameInfoContext ------------------------------------------------------------------

HistoryFileGrammarParser::GameInfoContext::GameInfoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryFileGrammarParser::TypeOfGameContext* HistoryFileGrammarParser::GameInfoContext::typeOfGame() {
  return getRuleContext<HistoryFileGrammarParser::TypeOfGameContext>(0);
}

HistoryFileGrammarParser::NameOfGameContext* HistoryFileGrammarParser::GameInfoContext::nameOfGame() {
  return getRuleContext<HistoryFileGrammarParser::NameOfGameContext>(0);
}

HistoryFileGrammarParser::BuyinContext* HistoryFileGrammarParser::GameInfoContext::buyin() {
  return getRuleContext<HistoryFileGrammarParser::BuyinContext>(0);
}

HistoryFileGrammarParser::LevelContext* HistoryFileGrammarParser::GameInfoContext::level() {
  return getRuleContext<HistoryFileGrammarParser::LevelContext>(0);
}


size_t HistoryFileGrammarParser::GameInfoContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleGameInfo;
}

void HistoryFileGrammarParser::GameInfoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGameInfo(this);
}

void HistoryFileGrammarParser::GameInfoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGameInfo(this);
}

HistoryFileGrammarParser::GameInfoContext* HistoryFileGrammarParser::gameInfo() {
  GameInfoContext *_localctx = _tracker.createInstance<GameInfoContext>(_ctx, getState());
  enterRule(_localctx, 10, HistoryFileGrammarParser::RuleGameInfo);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(222);
    typeOfGame();
    setState(223);
    nameOfGame();
    setState(224);
    buyin();
    setState(225);
    level();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeOfGameContext ------------------------------------------------------------------

HistoryFileGrammarParser::TypeOfGameContext::TypeOfGameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HistoryFileGrammarParser::TypeOfGameContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleTypeOfGame;
}

void HistoryFileGrammarParser::TypeOfGameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeOfGame(this);
}

void HistoryFileGrammarParser::TypeOfGameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeOfGame(this);
}

HistoryFileGrammarParser::TypeOfGameContext* HistoryFileGrammarParser::typeOfGame() {
  TypeOfGameContext *_localctx = _tracker.createInstance<TypeOfGameContext>(_ctx, getState());
  enterRule(_localctx, 12, HistoryFileGrammarParser::RuleTypeOfGame);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(227);
    match(HistoryFileGrammarParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameOfGameContext ------------------------------------------------------------------

HistoryFileGrammarParser::NameOfGameContext::NameOfGameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HistoryFileGrammarParser::NameOfGameContext::MOT() {
  return getTokens(HistoryFileGrammarParser::MOT);
}

tree::TerminalNode* HistoryFileGrammarParser::NameOfGameContext::MOT(size_t i) {
  return getToken(HistoryFileGrammarParser::MOT, i);
}


size_t HistoryFileGrammarParser::NameOfGameContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleNameOfGame;
}

void HistoryFileGrammarParser::NameOfGameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNameOfGame(this);
}

void HistoryFileGrammarParser::NameOfGameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNameOfGame(this);
}

HistoryFileGrammarParser::NameOfGameContext* HistoryFileGrammarParser::nameOfGame() {
  NameOfGameContext *_localctx = _tracker.createInstance<NameOfGameContext>(_ctx, getState());
  enterRule(_localctx, 14, HistoryFileGrammarParser::RuleNameOfGame);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(229);
    match(HistoryFileGrammarParser::T__3);
    setState(231); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(230);
      match(HistoryFileGrammarParser::MOT);
      setState(233); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HistoryFileGrammarParser::MOT);
    setState(235);
    match(HistoryFileGrammarParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BuyinContext ------------------------------------------------------------------

HistoryFileGrammarParser::BuyinContext::BuyinContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryFileGrammarParser::BuyValueContext* HistoryFileGrammarParser::BuyinContext::buyValue() {
  return getRuleContext<HistoryFileGrammarParser::BuyValueContext>(0);
}

HistoryFileGrammarParser::RakeBuyValueContext* HistoryFileGrammarParser::BuyinContext::rakeBuyValue() {
  return getRuleContext<HistoryFileGrammarParser::RakeBuyValueContext>(0);
}


size_t HistoryFileGrammarParser::BuyinContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleBuyin;
}

void HistoryFileGrammarParser::BuyinContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBuyin(this);
}

void HistoryFileGrammarParser::BuyinContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryFileGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBuyin(this);
}

HistoryFileGrammarParser::BuyinContext* HistoryFileGrammarParser::buyin() {
  BuyinContext *_localctx = _tracker.createInstance<BuyinContext>(_ctx, getState());
  enterRule(_localctx, 16, HistoryFileGrammarParser::RuleBuyin);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(237);
    match(HistoryFileGrammarParser::T__4);
    setState(238);
    buyValue();
    setState(239);
    match(HistoryFileGrammarParser::T__5);
    setState(240);
    rakeBuyValue();
    setState(241);
    match(HistoryFileGrammarParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BuyValueContext ------------------------------------------------------------------

HistoryFileGrammarParser::BuyValueContext::BuyValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HistoryFileGrammarParser::BuyValueContext::NUMBER() {
  return getToken(HistoryFileGrammarParser::NUMBER, 0);
}

tree::TerminalNode* HistoryFileGrammarParser::BuyValueContext::DIGIT() {
  return getToken(HistoryFileGrammarParser::DIGIT, 0);
}


size_t HistoryFileGrammarParser::BuyValueContext::getRuleIndex() const {
  return HistoryFileGrammarParser::RuleBuyValue;
}
